test/corpus/comments.txt
================================================================================
Comments
================================================================================

// Single line
1

/*
 * Multiline
 */
2

/* /* Nested
  /* multiple */ times
  // */ */
3

4 // post single-line

5 /* post multi-line */

/* / */
6

/* */ 7

/** **/ 8

/* comment //*/ */*/ 9

foo
  // in-pipe
  ->bar

switch foo {
| 1 => 1
// in-switch
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (comment)
  (comment)
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (comment)
  (expression_statement
    (number))
  (expression_statement
    (pipe_expression
      (value_name)
      (comment)
      (value_name)))
  (expression_statement
    (switch_expression
      (value_name)
      (switch_match
        (number)
        (sequence_expression
          (expression_statement
            (number))))
      (comment))))
